# DiscreteMath

./: Dockerfile  README.md
C/: .gitignore  README.md  meson.build
C/include/: bitstrings.h  chapter1.h  propositions.h
C/src/: bitstrings.c  bitstrings.h  chapter1.c  chapter1.h  dm.c  logic-operators.c  logic-operators.h  main.c  meson.build  proposition.h  propositions.c  propositions.h
C/src/structures/: stacks.c  stacks.h
C/test/: meson.build  test_bitstrings.c  test_logic-operators.c
Rust/: Cargo.toml
