logic_operators_src = files('''
        logic-operators.c
'''.split())

bitstrings_src = files('''
        bitstrings.c
'''.split())

propositions_src = files('''
        propositions.c
'''.split())

stacks_src = files('''
        structures/stacks.c
'''.split())

dm_src = [files('''
        chapter1.c
        dm.c
'''.split()),
logic_operators_src,
bitstrings_src,
propositions_src,
stacks_src
]